--- a/Oh-Gili/View/PostTableViewCell.xib
+++ b/Oh-Gili/View/PostTableViewCell.xib
@@ -24,25 +24,26 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="キャプション" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HQm-46-AgZ">
-                        <rect key="frame" x="70" y="10" width="310" height="21"/>
+                        <rect key="frame" x="70" y="10" width="280" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日時" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hhh-hx-aWs">
-                        <rect key="frame" x="70" y="31" width="310" height="16"/>
+                        <rect key="frame" x="70" y="31" width="280" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YEU-fi-uoc">
-                        <rect key="frame" x="30" y="67" width="330" height="330"/>
+                        <rect key="frame" x="30" y="67" width="300" height="300"/>
                         <constraints>
+                            <constraint firstAttribute="width" constant="300" id="8Qd-am-Nhy"/>
                             <constraint firstAttribute="width" secondItem="YEU-fi-uoc" secondAttribute="height" multiplier="1:1" id="qNS-wM-Foe"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uhD-XO-SYd">
-                        <rect key="frame" x="10" y="407" width="50" height="50"/>
+                        <rect key="frame" x="10" y="377" width="50" height="50"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="YAp-FF-i8Y"/>
                             <constraint firstAttribute="height" constant="50" id="vQY-Qm-O7P"/>
@@ -50,7 +51,7 @@
                         <state key="normal" title="Button" image="座布団（白黒）"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GsQ-m1-X2c">
-                        <rect key="frame" x="70" y="421.5" width="42" height="21"/>
+                        <rect key="frame" x="70" y="391.5" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -69,6 +70,7 @@
                     <constraint firstItem="Hhh-hx-aWs" firstAttribute="leading" secondItem="aHM-SP-V16" secondAttribute="trailing" constant="10" id="e63-Ns-0Yn"/>
                     <constraint firstItem="YEU-fi-uoc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="eXo-tv-0iS"/>
                     <constraint firstAttribute="trailingMargin" secondItem="YEU-fi-uoc" secondAttribute="trailing" constant="10" id="kxI-5E-EC7"/>
+                    <constraint firstItem="YEU-fi-uoc" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="pGB-WR-Oxt"/>
                     <constraint firstItem="HQm-46-AgZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="pyx-Qj-HhP"/>
                     <constraint firstItem="uhD-XO-SYd" firstAttribute="top" secondItem="YEU-fi-uoc" secondAttribute="bottom" constant="10" id="t8w-Fo-VDS"/>
                     <constraint firstAttribute="trailing" secondItem="Hhh-hx-aWs" secondAttribute="trailing" constant="10" id="tS2-TK-ciS"/>
