--- a/Oh-Gili/View/PostTableViewCell.xib
+++ b/Oh-Gili/View/PostTableViewCell.xib
@@ -9,11 +9,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="555" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Oh_Gili" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="390" height="555"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="556" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Oh_Gili" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="361" height="556"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="390" height="555"/>
+                <rect key="frame" x="0.0" y="0.0" width="361" height="556"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aHM-SP-V16">
@@ -22,28 +22,32 @@
                             <constraint firstAttribute="width" constant="50" id="6HR-KN-TRj"/>
                             <constraint firstAttribute="height" constant="50" id="Puc-EX-40M"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="25"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="キャプション" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HQm-46-AgZ">
-                        <rect key="frame" x="70" y="10" width="280" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HQm-46-AgZ">
+                        <rect key="frame" x="70" y="10" width="281" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日時" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hhh-hx-aWs">
-                        <rect key="frame" x="70" y="31" width="280" height="16"/>
+                        <rect key="frame" x="70" y="31" width="281" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YEU-fi-uoc">
-                        <rect key="frame" x="30" y="67" width="300" height="300"/>
+                        <rect key="frame" x="50" y="110.5" width="261" height="261"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="300" id="8Qd-am-Nhy"/>
                             <constraint firstAttribute="width" secondItem="YEU-fi-uoc" secondAttribute="height" multiplier="1:1" id="qNS-wM-Foe"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uhD-XO-SYd">
-                        <rect key="frame" x="10" y="377" width="50" height="50"/>
+                        <rect key="frame" x="10" y="381.5" width="50" height="50"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="YAp-FF-i8Y"/>
                             <constraint firstAttribute="height" constant="50" id="vQY-Qm-O7P"/>
@@ -51,8 +55,17 @@
                         <state key="normal" title="Button" image="座布団（白黒）"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GsQ-m1-X2c">
-                        <rect key="frame" x="70" y="391.5" width="42" height="21"/>
+                        <rect key="frame" x="70" y="396" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="キャプション" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K6L-87-4wc">
+                        <rect key="frame" x="30.5" y="67" width="300" height="33.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="300" id="iZl-Fa-9d0"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -62,30 +75,33 @@
                     <constraint firstItem="aHM-SP-V16" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Cxp-R0-4aa"/>
                     <constraint firstItem="Hhh-hx-aWs" firstAttribute="top" secondItem="HQm-46-AgZ" secondAttribute="bottom" id="Eqx-Ax-MA5"/>
                     <constraint firstItem="GsQ-m1-X2c" firstAttribute="centerY" secondItem="uhD-XO-SYd" secondAttribute="centerY" id="Iec-Lu-021"/>
+                    <constraint firstItem="YEU-fi-uoc" firstAttribute="top" secondItem="K6L-87-4wc" secondAttribute="bottom" constant="10" id="LEj-OA-cYS"/>
+                    <constraint firstItem="K6L-87-4wc" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="TVI-XN-Cf9"/>
                     <constraint firstAttribute="trailing" secondItem="HQm-46-AgZ" secondAttribute="trailing" constant="10" id="Wc2-Ka-m2D"/>
                     <constraint firstItem="HQm-46-AgZ" firstAttribute="leading" secondItem="aHM-SP-V16" secondAttribute="trailing" constant="10" id="ZdS-Zv-HGG"/>
-                    <constraint firstItem="YEU-fi-uoc" firstAttribute="top" secondItem="Hhh-hx-aWs" secondAttribute="bottom" constant="20" id="Zym-ra-Ptz"/>
                     <constraint firstItem="aHM-SP-V16" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="czB-zs-dNh"/>
                     <constraint firstItem="uhD-XO-SYd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="dkd-yD-Wml"/>
                     <constraint firstItem="Hhh-hx-aWs" firstAttribute="leading" secondItem="aHM-SP-V16" secondAttribute="trailing" constant="10" id="e63-Ns-0Yn"/>
-                    <constraint firstItem="YEU-fi-uoc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="eXo-tv-0iS"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="YEU-fi-uoc" secondAttribute="trailing" constant="10" id="kxI-5E-EC7"/>
+                    <constraint firstItem="YEU-fi-uoc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="30" id="eXo-tv-0iS"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="YEU-fi-uoc" secondAttribute="trailing" constant="30" id="kxI-5E-EC7"/>
                     <constraint firstItem="YEU-fi-uoc" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="pGB-WR-Oxt"/>
                     <constraint firstItem="HQm-46-AgZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="pyx-Qj-HhP"/>
                     <constraint firstItem="uhD-XO-SYd" firstAttribute="top" secondItem="YEU-fi-uoc" secondAttribute="bottom" constant="10" id="t8w-Fo-VDS"/>
                     <constraint firstAttribute="trailing" secondItem="Hhh-hx-aWs" secondAttribute="trailing" constant="10" id="tS2-TK-ciS"/>
+                    <constraint firstItem="K6L-87-4wc" firstAttribute="top" secondItem="Hhh-hx-aWs" secondAttribute="bottom" constant="20" id="wlA-dl-0zW"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="captionLabel" destination="HQm-46-AgZ" id="gQ7-K4-l1j"/>
+                <outlet property="captionLabel" destination="K6L-87-4wc" id="taB-9Q-MSt"/>
                 <outlet property="dateLabel" destination="Hhh-hx-aWs" id="CQ4-Mh-1KI"/>
                 <outlet property="likeButton" destination="uhD-XO-SYd" id="vGU-eO-uTx"/>
                 <outlet property="likeLabel" destination="GsQ-m1-X2c" id="C9u-w5-nHn"/>
+                <outlet property="nameLabel" destination="HQm-46-AgZ" id="Ah1-Y3-A9z"/>
                 <outlet property="postImageView" destination="YEU-fi-uoc" id="DyC-zw-Jxi"/>
                 <outlet property="profileImageView" destination="aHM-SP-V16" id="okz-in-Vug"/>
             </connections>
-            <point key="canvasLocation" x="118.84057971014494" y="186.49553571428569"/>
+            <point key="canvasLocation" x="97.826086956521749" y="186.16071428571428"/>
         </tableViewCell>
     </objects>
     <resources>
