--- a/Oh-Gili/View/PostTableViewCell.xib
+++ b/Oh-Gili/View/PostTableViewCell.xib
@@ -9,11 +9,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="556" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Oh_Gili" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="361" height="556"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="277" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Oh_Gili" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="363" height="277"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="361" height="556"/>
+                <rect key="frame" x="0.0" y="0.0" width="363" height="277"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aHM-SP-V16">
@@ -29,39 +29,44 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HQm-46-AgZ">
-                        <rect key="frame" x="70" y="10" width="281" height="21"/>
+                        <rect key="frame" x="70" y="10" width="283" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日時" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hhh-hx-aWs">
-                        <rect key="frame" x="70" y="31" width="281" height="16"/>
+                        <rect key="frame" x="70" y="31" width="283" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YEU-fi-uoc">
-                        <rect key="frame" x="50" y="110.5" width="261" height="261"/>
+                        <rect key="frame" x="10" y="113.5" width="150" height="150"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="YEU-fi-uoc" secondAttribute="height" multiplier="1:1" id="qNS-wM-Foe"/>
+                            <constraint firstAttribute="width" secondItem="YEU-fi-uoc" secondAttribute="height" multiplier="1:1" id="aWH-Qx-rQg"/>
+                            <constraint firstAttribute="height" constant="150" id="xwk-nf-4En"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uhD-XO-SYd">
-                        <rect key="frame" x="10" y="381.5" width="50" height="50"/>
+                        <rect key="frame" x="170" y="113.5" width="50" height="50"/>
                         <constraints>
+                            <constraint firstAttribute="height" constant="50" id="A9Q-vX-FPz"/>
                             <constraint firstAttribute="width" constant="50" id="YAp-FF-i8Y"/>
-                            <constraint firstAttribute="height" constant="50" id="vQY-Qm-O7P"/>
                         </constraints>
                         <state key="normal" title="Button" image="座布団（白黒）"/>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GsQ-m1-X2c">
-                        <rect key="frame" x="70" y="396" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GsQ-m1-X2c">
+                        <rect key="frame" x="220" y="123.5" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="Kd6-8H-g1O"/>
+                            <constraint firstAttribute="height" constant="30" id="N2I-x2-sb8"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="キャプション" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K6L-87-4wc">
-                        <rect key="frame" x="30.5" y="67" width="300" height="33.5"/>
+                        <rect key="frame" x="30" y="70" width="300" height="33.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="300" id="iZl-Fa-9d0"/>
                         </constraints>
@@ -69,42 +74,65 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="17g-TW-AxD">
+                        <rect key="frame" x="175" y="173.5" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="Ikf-BU-c7a"/>
+                            <constraint firstAttribute="height" constant="30" id="O8D-BV-zBk"/>
+                        </constraints>
+                        <state key="normal" title="Button" image="like_exist"/>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jac-EM-BZZ">
+                        <rect key="frame" x="215" y="173.5" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="9NO-FL-v5x"/>
+                            <constraint firstAttribute="width" constant="30" id="DXh-TW-6V9"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="GsQ-m1-X2c" firstAttribute="leading" secondItem="uhD-XO-SYd" secondAttribute="trailing" constant="10" id="CSo-iE-Bhi"/>
+                    <constraint firstAttribute="trailing" secondItem="Hhh-hx-aWs" secondAttribute="trailing" constant="10" id="0ws-cj-fZw"/>
+                    <constraint firstItem="GsQ-m1-X2c" firstAttribute="centerY" secondItem="uhD-XO-SYd" secondAttribute="centerY" id="80L-tx-aOy"/>
+                    <constraint firstItem="K6L-87-4wc" firstAttribute="top" secondItem="aHM-SP-V16" secondAttribute="bottom" constant="10" id="8ie-Bk-mIB"/>
                     <constraint firstItem="aHM-SP-V16" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Cxp-R0-4aa"/>
                     <constraint firstItem="Hhh-hx-aWs" firstAttribute="top" secondItem="HQm-46-AgZ" secondAttribute="bottom" id="Eqx-Ax-MA5"/>
-                    <constraint firstItem="GsQ-m1-X2c" firstAttribute="centerY" secondItem="uhD-XO-SYd" secondAttribute="centerY" id="Iec-Lu-021"/>
+                    <constraint firstItem="17g-TW-AxD" firstAttribute="leading" secondItem="YEU-fi-uoc" secondAttribute="trailing" constant="15" id="Exz-yN-fvR"/>
                     <constraint firstItem="YEU-fi-uoc" firstAttribute="top" secondItem="K6L-87-4wc" secondAttribute="bottom" constant="10" id="LEj-OA-cYS"/>
-                    <constraint firstItem="K6L-87-4wc" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="TVI-XN-Cf9"/>
+                    <constraint firstItem="jac-EM-BZZ" firstAttribute="centerY" secondItem="17g-TW-AxD" secondAttribute="centerY" id="PpR-b3-7kz"/>
+                    <constraint firstItem="uhD-XO-SYd" firstAttribute="leading" secondItem="YEU-fi-uoc" secondAttribute="trailing" constant="10" id="Tda-Ch-hzm"/>
+                    <constraint firstItem="YEU-fi-uoc" firstAttribute="leading" secondItem="aHM-SP-V16" secondAttribute="leading" id="W88-dx-i5m"/>
                     <constraint firstAttribute="trailing" secondItem="HQm-46-AgZ" secondAttribute="trailing" constant="10" id="Wc2-Ka-m2D"/>
+                    <constraint firstItem="17g-TW-AxD" firstAttribute="top" secondItem="uhD-XO-SYd" secondAttribute="bottom" constant="10" id="XJu-AJ-2BD"/>
                     <constraint firstItem="HQm-46-AgZ" firstAttribute="leading" secondItem="aHM-SP-V16" secondAttribute="trailing" constant="10" id="ZdS-Zv-HGG"/>
                     <constraint firstItem="aHM-SP-V16" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="czB-zs-dNh"/>
-                    <constraint firstItem="uhD-XO-SYd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="dkd-yD-Wml"/>
+                    <constraint firstItem="uhD-XO-SYd" firstAttribute="top" secondItem="K6L-87-4wc" secondAttribute="bottom" constant="10" id="e4R-Ac-Eu9"/>
                     <constraint firstItem="Hhh-hx-aWs" firstAttribute="leading" secondItem="aHM-SP-V16" secondAttribute="trailing" constant="10" id="e63-Ns-0Yn"/>
-                    <constraint firstItem="YEU-fi-uoc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="30" id="eXo-tv-0iS"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="YEU-fi-uoc" secondAttribute="trailing" constant="30" id="kxI-5E-EC7"/>
-                    <constraint firstItem="YEU-fi-uoc" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="pGB-WR-Oxt"/>
+                    <constraint firstItem="K6L-87-4wc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="jb7-x7-9Jw"/>
+                    <constraint firstItem="GsQ-m1-X2c" firstAttribute="leading" secondItem="uhD-XO-SYd" secondAttribute="trailing" id="nHt-6C-YBn"/>
                     <constraint firstItem="HQm-46-AgZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="pyx-Qj-HhP"/>
-                    <constraint firstItem="uhD-XO-SYd" firstAttribute="top" secondItem="YEU-fi-uoc" secondAttribute="bottom" constant="10" id="t8w-Fo-VDS"/>
-                    <constraint firstAttribute="trailing" secondItem="Hhh-hx-aWs" secondAttribute="trailing" constant="10" id="tS2-TK-ciS"/>
-                    <constraint firstItem="K6L-87-4wc" firstAttribute="top" secondItem="Hhh-hx-aWs" secondAttribute="bottom" constant="20" id="wlA-dl-0zW"/>
+                    <constraint firstItem="jac-EM-BZZ" firstAttribute="leading" secondItem="17g-TW-AxD" secondAttribute="trailing" constant="10" id="uVl-BA-f99"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="captionLabel" destination="K6L-87-4wc" id="taB-9Q-MSt"/>
                 <outlet property="dateLabel" destination="Hhh-hx-aWs" id="CQ4-Mh-1KI"/>
-                <outlet property="likeButton" destination="uhD-XO-SYd" id="vGU-eO-uTx"/>
-                <outlet property="likeLabel" destination="GsQ-m1-X2c" id="C9u-w5-nHn"/>
+                <outlet property="likeButton" destination="17g-TW-AxD" id="KfB-ft-TMB"/>
+                <outlet property="likeLabel" destination="jac-EM-BZZ" id="kuK-wo-kyg"/>
                 <outlet property="nameLabel" destination="HQm-46-AgZ" id="Ah1-Y3-A9z"/>
                 <outlet property="postImageView" destination="YEU-fi-uoc" id="DyC-zw-Jxi"/>
                 <outlet property="profileImageView" destination="aHM-SP-V16" id="okz-in-Vug"/>
+                <outlet property="zabutonButton" destination="uhD-XO-SYd" id="Z2N-pS-e6x"/>
+                <outlet property="zabutonLabel" destination="GsQ-m1-X2c" id="pwh-7A-Izy"/>
             </connections>
-            <point key="canvasLocation" x="97.826086956521749" y="186.16071428571428"/>
+            <point key="canvasLocation" x="99.275362318840592" y="92.745535714285708"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="座布団（白黒）" width="123" height="115"/>
+        <image name="like_exist" width="40" height="40"/>
+        <image name="座布団（白黒）" width="41" height="38.333332061767578"/>
     </resources>
 </document>
