--- a/Oh-Gili/View/CommentTableViewCell.xib
+++ b/Oh-Gili/View/CommentTableViewCell.xib
@@ -45,15 +45,15 @@
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2sP-RN-5zg">
-                        <rect key="frame" x="350" y="31" width="30" height="30"/>
+                        <rect key="frame" x="330" y="31" width="50" height="50"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="69i-Lp-jOQ"/>
-                            <constraint firstAttribute="width" constant="30" id="N1a-Wo-L78"/>
+                            <constraint firstAttribute="height" constant="50" id="69i-Lp-jOQ"/>
+                            <constraint firstAttribute="width" constant="50" id="N1a-Wo-L78"/>
                         </constraints>
-                        <state key="normal" title="Button" image="like_exist"/>
+                        <state key="normal" title="Button" image="座布団"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" 000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ef-r2-BQB">
-                        <rect key="frame" x="380" y="31" width="30" height="30"/>
+                        <rect key="frame" x="380" y="41" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="ODc-Zw-2BN"/>
                             <constraint firstAttribute="width" constant="30" id="xBt-c8-kyi"/>
@@ -63,7 +63,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日時" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hE2-re-gdB">
-                        <rect key="frame" x="70" y="36" width="270" height="21"/>
+                        <rect key="frame" x="70" y="36" width="250" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -78,7 +78,6 @@
                     <constraint firstItem="982-0X-tjm" firstAttribute="leading" secondItem="oaV-mZ-3Kb" secondAttribute="trailing" constant="10" id="QZv-At-J1x"/>
                     <constraint firstItem="982-0X-tjm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="VGl-Fm-LPP"/>
                     <constraint firstAttribute="trailing" secondItem="RkU-vV-X1x" secondAttribute="trailing" constant="10" id="Wzu-vj-u5n"/>
-                    <constraint firstItem="6ef-r2-BQB" firstAttribute="top" secondItem="982-0X-tjm" secondAttribute="bottom" id="Xmd-95-9n8"/>
                     <constraint firstItem="hE2-re-gdB" firstAttribute="top" secondItem="982-0X-tjm" secondAttribute="bottom" constant="5" id="ZWK-DS-PrC"/>
                     <constraint firstAttribute="bottom" secondItem="RkU-vV-X1x" secondAttribute="bottom" constant="10" id="cxr-2e-iNu"/>
                     <constraint firstItem="6ef-r2-BQB" firstAttribute="leading" secondItem="2sP-RN-5zg" secondAttribute="trailing" id="hCS-m0-mfN"/>
@@ -87,21 +86,22 @@
                     <constraint firstItem="oaV-mZ-3Kb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="r5H-cR-knf"/>
                     <constraint firstItem="RkU-vV-X1x" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="t4g-pu-v17"/>
                     <constraint firstItem="RkU-vV-X1x" firstAttribute="top" secondItem="oaV-mZ-3Kb" secondAttribute="bottom" constant="10" id="xxN-gM-wil"/>
+                    <constraint firstItem="6ef-r2-BQB" firstAttribute="centerY" secondItem="2sP-RN-5zg" secondAttribute="centerY" id="zI0-Uv-eoI"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="dateLabel" destination="hE2-re-gdB" id="upF-YT-d8v"/>
-                <outlet property="likeButton" destination="2sP-RN-5zg" id="Rtf-B8-hpp"/>
-                <outlet property="likeCount" destination="6ef-r2-BQB" id="Rat-PO-Lla"/>
                 <outlet property="nameLabel" destination="982-0X-tjm" id="n2F-Dh-Rvh"/>
                 <outlet property="profileImage" destination="oaV-mZ-3Kb" id="FTK-py-v8F"/>
                 <outlet property="textView" destination="RkU-vV-X1x" id="LL2-Po-oIj"/>
+                <outlet property="zabutonButton" destination="2sP-RN-5zg" id="RgT-Y2-6Q2"/>
+                <outlet property="zabutonCount" destination="6ef-r2-BQB" id="ptd-G5-QPq"/>
             </connections>
             <point key="canvasLocation" x="210.1449275362319" y="151.00446428571428"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="like_exist" width="40" height="40"/>
+        <image name="座布団" width="41" height="38.333332061767578"/>
     </resources>
 </document>
