--- a/Oh-Gili/View/PostTableViewCell.xib
+++ b/Oh-Gili/View/PostTableViewCell.xib
@@ -53,7 +53,7 @@
                             <constraint firstAttribute="height" constant="50" id="A9Q-vX-FPz"/>
                             <constraint firstAttribute="width" constant="50" id="YAp-FF-i8Y"/>
                         </constraints>
-                        <state key="normal" title="Button" image="座布団（白黒）"/>
+                        <state key="normal" image="座布団（白黒）"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GsQ-m1-X2c">
                         <rect key="frame" x="220" y="123.5" width="30" height="30"/>
@@ -75,15 +75,15 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="17g-TW-AxD">
-                        <rect key="frame" x="175" y="173.5" width="30" height="30"/>
+                        <rect key="frame" x="180" y="173.5" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="Ikf-BU-c7a"/>
                             <constraint firstAttribute="height" constant="30" id="O8D-BV-zBk"/>
                         </constraints>
-                        <state key="normal" title="Button" image="like_exist"/>
+                        <state key="normal" image="like_exist"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jac-EM-BZZ">
-                        <rect key="frame" x="215" y="173.5" width="30" height="30"/>
+                        <rect key="frame" x="220" y="173.5" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="9NO-FL-v5x"/>
                             <constraint firstAttribute="width" constant="30" id="DXh-TW-6V9"/>
@@ -99,7 +99,6 @@
                     <constraint firstItem="K6L-87-4wc" firstAttribute="top" secondItem="aHM-SP-V16" secondAttribute="bottom" constant="10" id="8ie-Bk-mIB"/>
                     <constraint firstItem="aHM-SP-V16" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Cxp-R0-4aa"/>
                     <constraint firstItem="Hhh-hx-aWs" firstAttribute="top" secondItem="HQm-46-AgZ" secondAttribute="bottom" id="Eqx-Ax-MA5"/>
-                    <constraint firstItem="17g-TW-AxD" firstAttribute="leading" secondItem="YEU-fi-uoc" secondAttribute="trailing" constant="15" id="Exz-yN-fvR"/>
                     <constraint firstItem="YEU-fi-uoc" firstAttribute="top" secondItem="K6L-87-4wc" secondAttribute="bottom" constant="10" id="LEj-OA-cYS"/>
                     <constraint firstItem="jac-EM-BZZ" firstAttribute="centerY" secondItem="17g-TW-AxD" secondAttribute="centerY" id="PpR-b3-7kz"/>
                     <constraint firstItem="uhD-XO-SYd" firstAttribute="leading" secondItem="YEU-fi-uoc" secondAttribute="trailing" constant="10" id="Tda-Ch-hzm"/>
@@ -110,6 +109,7 @@
                     <constraint firstItem="aHM-SP-V16" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="czB-zs-dNh"/>
                     <constraint firstItem="uhD-XO-SYd" firstAttribute="top" secondItem="K6L-87-4wc" secondAttribute="bottom" constant="10" id="e4R-Ac-Eu9"/>
                     <constraint firstItem="Hhh-hx-aWs" firstAttribute="leading" secondItem="aHM-SP-V16" secondAttribute="trailing" constant="10" id="e63-Ns-0Yn"/>
+                    <constraint firstItem="17g-TW-AxD" firstAttribute="centerX" secondItem="uhD-XO-SYd" secondAttribute="centerX" id="gT6-w3-rk0"/>
                     <constraint firstItem="K6L-87-4wc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="jb7-x7-9Jw"/>
                     <constraint firstItem="GsQ-m1-X2c" firstAttribute="leading" secondItem="uhD-XO-SYd" secondAttribute="trailing" id="nHt-6C-YBn"/>
                     <constraint firstItem="HQm-46-AgZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="pyx-Qj-HhP"/>
